...
	flatList,
	renderRow,
	hideSystemMessages,
	showMessageInMainThread
}: IDefaultRoomUIProps) => {
	return (
		<SafeAreaView style={{ backgroundColor: themes[theme].backgroundColor }} testID='room-view'>
			<StatusBar />
			<Banner title={I18n.t('Announcement')} text={announcement} bannerClosed={bannerClosed} closeBanner={closeBanner} />
			<List
				ref={listRef}
				listRef={flatList}
				rid={rid}
...
